--- a/ad-astra.html
+++ b/ad-astra.html
@@ -2,11 +2,7 @@
 layout: portfolio
 color: red
 title: Ad Astra
-
-featureimg: ad-astra
-slogan: "Sic itur ad astra: 'thus you shall go to the stars'."
-oneliner: "Creating a dream-like retreat that transported visitors into the night sky."
-challenge: "Transform a 400 sqft lunchroom into a temporary night-time destination."
+oneliner: "How might we transform a small lunchroom into a temporary night-time destination?"
 
 images:
   - image_path: ../assets/images/projects/ad-astra/5.jpg
