--- a/ad-astra.html
+++ b/ad-astra.html
@@ -9,6 +9,7 @@ images:
     title: Ad Astra
   - image_path: ../assets/images/projects/ad-astra/3.jpg
     title: Ad Astra
+    caption-right: "Visitors were invited to interact with the lights at 8 interaction points, triggering a music. With all eight triggered, an orchestra was created."
   - image_path: ../assets/images/projects/ad-astra/6.jpg
     title: Ad Astra
   - image_path: ../assets/images/projects/ad-astra/1.jpg
@@ -20,6 +21,9 @@ images:
 
 client: "Bata Shoe Museum / Nuit Blanche"
 date: "March - October 2013"
+
+next: creative-catalyst
+prev: sandbox
 ---
 
 <p>Ad Astra was an interactive experience that immersed visitors into an infinite night sky and created a quiet — but highly memorable — retreat from a festival known for crowds and all-night adventures across the city. <span class="theme-color"><strong>One of the core goals of the project was to create a simple, photogenic intervention that the general public could immerse themselves within, and as well, become an active participant in a collective experience.</strong></span></p>
