--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@ title: Jamie Kwan | Experience Design & Strategy
 
 				<div class="row relative">
 
-					<div class="col-sm-12 col-md-6 col-md-offset-6 col-bg">
+					<div class="col-sm-12 col-md-6 col-bg">
 
 						<h2 class="module-title font-alt">My Story</h2>
 
