--- a/index.html
+++ b/index.html
@@ -257,12 +257,14 @@ title: Jamie Kwan | Experience Design & Strategy
 						<h2 class="module-title font-alt">My Story</h2>
 
 						<div class="module-subtitle font-inc">
-							DESIGNER | STRATEGIST | STORYTELLER 
+						DESIGNER | STRATEGIST | STORYTELLER 
 						</div>
 
-						<p>The languages only differ in their grammar, their pronunciation and their most common words. Everyone realizes why a new common language would be desirable: one could refuse to pay expensive translators.</p>
+						<p><strong>I believe that great experiences inspire play and curiosity.</strong></p>
 
-						<p>To achieve this, it would be necessary to have uniform grammar, pronunciation and more common words. If several languages coalesce, the grammar of the resulting language is more simple and regular than that of the individual languages.</p>
+						<p>Armed with the tools of both an architect and a digital strategist, I am a passionate brand storyteller who is dedicated to crafting engaging human experiences in the real world. By seeing branded storytelling from both a spatial and a pixel scale, these crafted experiences prompt a strong sense of engagement through a holistic approach. I believe in applying the elements of storytelling and play to build stronger relationships through brand design in the real-world.</p>
+
+						<p><a href="/about">Read More</a></p>
 
 					</div>
 
